# adblock-dns-server

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  adblock_bind.Dockerfile  adblock_nginx.Dockerfile  docker-compose.yml  gitlab-ci.yml  main.py  sample.env  settings.py  setup.sh  start.sh  stop.sh
adblock_dns/compiler/: Cargo.toml
adblock_dns/compiler/src/: lib.rs  main.rs
adblock_dns/compiler/src/service/: blacklist.rs  hosts_writer.rs  overrides.rs  whitelist.rs
adblock_dns/compiler/src/settings/: cli.rs  cli_args.rs  config_source.rs  configuration.rs  (+1 more)
compiler/: .gitignore  Cargo.toml  Dockerfile  Pipfile  docker-compose.yml
compiler/data/: blacklist-src-urls.txt  overrides-src-urls.json  whitelist-src-urls.json
compiler/data/blacklist.d/: ads_custom.hosts  porn_custom.hosts  rlwpx_malware.hosts  rlwpx_misc.hosts
compiler/data/blacklist.d.bak/: rlwpx_trackers.hosts
compiler/data/output.d/: .dockerignore
compiler/data/overrides.d/: bing-safesearch.zone  duckduckgo-safesearch.zone  google-safesearch.zone  youtube-safesearch.zone
compiler/data/whitelist.d/: blogspot_whitelist.hosts  facebook_whitelist.hosts  google_whitelist.hosts  microsoft_nsatc_net.zone  microsoft_whitelist.hosts  misc_whitelist.hosts  mist_whitelist.hosts  windows_update_nsatc_net.zone
compiler/scripts/: build.sh  compile.sh  push.sh
compiler/src/: blacklist_writer.py  configuration.rs  extractor.py  file_loader.py  http_loader.py  lib.rs  main.py  main.rs  settings.py  timing_utils.py
compiler/src/service/: blacklist.rs  config.rs  core.rs  extractor.rs  mod.rs  whitelist.rs
compiler_rust/: Cargo.toml
compiler_rust/data/: blacklist-src-urls.json  whitelist-src-urls.json
compiler_rust/data/blacklist.d/: ads_custom.hosts  ads_social_media.hosts  rlwpx_advertising.hosts
compiler_rust/data/whitelist.d/: facebook_whitelist.hosts  microsoft_whitelist.hosts  statuspage_whitelist.hosts  windows_update_nsatc_net.hosts
compiler_rust/src/: lib.rs  main.rs
compiler_rust/src/lib/: core.rs
compiler_rust/src/service/: config.rs  core.rs  extractor.rs  hosts_writer.rs  mod.rs
(+207 files in other folders)
