[package]
name = "compiler"
version = "0.1.0"
authors = ["Ragib Badaruddin <ragib@example.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
addr = "0.2.0"
async-std = "1.5.0"
async-trait = "0.1.24"
lazy_static = "1.4.0"
regex = "1"
reqwest = { version = "0.10", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "0.2", features = ["full"] }
config = "0.10.1"
