[package]
name = "compiler_rust"
version = "0.1.0"
authors = ["Ragib Badaruddin <ragib@seekasia.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
validators = "0.20.14"
regex = "1"
addr = "0.2.0"
