[package]
name = "compiler_rust"
version = "0.1.0"
authors = ["Ragib Badaruddin <ragib@example.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
addr = "0.2.0"
lazy_static = "1.4.0"
rayon = "1.3.0"
regex = "1"
reqwest = { version = "0.10", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
