[package]
name = "compiler"
version = "0.1.0"
authors = ["Ragib Badaruddin <ragib@example.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
addr = "0.2.0"
async-trait = "0.1.57"
config = "0.13.2"
lazy_static = "1.4.0"
regex = "1"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3.13"
tokio = { version = "1.8", features = ["full"] }
